# HAutoMLBench

./: .gitignore  README.md  pyproject.toml
experiments/: test_.ipynb
experiments/15 min/: results_15min.json
experiments/5 min/: result_5min_columns.json  results_5min.json
experiments/standariza_results_reg/: standa_metrics_regr.json
source/: git-release.py  test.py
source/benchmark/: __init__.py  columns_types.json  dataset.py  dictionarys.txt  functions_load.py  info.json  infos.jsonl  list_datasets.txt  properties.json  urls.txt  utils.py  variables.tsv
source/datasets/: automl_basic.py  dataset.py  functions_load.py  paws_test.py  pawx_en_test.py  sst_en.py  utils.py
source/datasets/paws-x-en/: dataset.yaml  loader.py
source/datasets/paws-x-en/paws-x-en/: dev.txt  test.txt
source/datasets/paws-x-es/: dataset.yaml  loader.py
source/datasets/sst-en/: dataset.yaml  loader.py
source/datasets/test/: solving_haha_2019.py  sst_test.py  test.py  wikicat_test.py  wnli_test.py
source/datasets/wikicat-es/: dataset.yaml  loader.py
source/datasets/wikicat-es/wikicat-es/: dev.tsv  dev.txt  test.tsv  test.txt
source/datasets/wnli-es/: dataset.yaml  loader.py
source/datasets/wnli-es/wnli-es/: all.tsv  description.txt  dev.tsv  dev.txt  test.tsv  test.txt  train.txt
