[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Ernesto Estevanell <ernestoestevanellv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
yamlable = "^1.1.1"
black = "^22.8.0"
wget = "^3.2"
pandas = "^1.1.3"
numpy = "^1.19.2"
jsonlines= "^3.0.0"
scikit-learn = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

